sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/HRMS_Slack_Setting__mdt.object-meta.xml
<CustomObject>
    <label>HRMS Slack Setting</label>
    <pluralLabel>HRMS Slack Settings</pluralLabel>
</CustomObject>