sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/fields/Digest_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Digest_Channel_Id__c</fullName>
    <label>Digest Channel Id</label>
    <type>Text</type>
    <length>32</length>
    <description>Channel that receives the daily who-is-out digest. Falls back to HR_Channel_Id__c when blank.</description>
</CustomField>