sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <label>Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Master switch. While false no Slack callout is attempted, so the integration can be deployed before the workspace and bot token exist without affecting leave submission.</description>
</CustomField>