sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/fields/HR_Can_Approve__c.field-meta.xml
<CustomField>
    <fullName>HR_Can_Approve__c</fullName>
    <label>HR Can Approve</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When true, an active employee in the HR department may approve or reject any request, not only ones where they are the named approver. The decision is still recorded against whoever made it. Leave false to keep the reporting manager as the only approver.</description>
</CustomField>