sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/fields/HR_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>HR_Channel_Id__c</fullName>
    <label>HR Channel Id</label>
    <type>Text</type>
    <length>32</length>
    <description>Slack channel id (for example C0123456789) that receives every leave request. Leave blank to notify HR employees by direct message instead.</description>
</CustomField>