sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/fields/HR_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>HR_Department_Name__c</fullName>
    <label>HR Department Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Department name treated as HR when resolving direct-message recipients.</description>
</CustomField>