sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <type>Text</type>
    <length>80</length>
    <description>Developer name of the Named Credential holding the Slack bot token. The token is never stored in this metadata.</description>
</CustomField>