sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/fields/Notify_HR__c.field-meta.xml
<CustomField>
    <fullName>Notify_HR__c</fullName>
    <label>Notify HR</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Notify the HR department, via HR_Channel_Id__c when set, otherwise by direct message to active employees in the HR department.</description>
</CustomField>