sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/fields/Notify_Manager__c.field-meta.xml
<CustomField>
    <fullName>Notify_Manager__c</fullName>
    <label>Notify Manager</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Send a direct message to the approver named on the request.</description>
</CustomField>