sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/fields/Notify_Punch__c.field-meta.xml
<CustomField>
    <fullName>Notify_Punch__c</fullName>
    <label>Notify On Punch</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Direct message the employee when a clock-in or clock-out is recorded from the web portal or a biometric device. Punches made through the Slack command are never announced this way, because the command already confirms them.</description>
</CustomField>