sf-hrms/force-app/main/default/objects/HRMS_Slack_Setting__mdt/fields/Workspace_Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Team_Id__c</fullName>
    <label>Workspace Team Id</label>
    <type>Text</type>
    <length>32</length>
    <description>Workspace id (T...) inside an Enterprise Grid org. An org-installed app holds a token spanning the whole org, so Slack needs to be told which workspace a channel or direct message belongs to. Sent as team_id. Leave blank for a single-workspace install.</description>
</CustomField>